Added Text generation route

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URI=''
 RESEND_API_KEY='re_XxtWYYPx_KEZCkVExTMk2tMcxa2f2oytU'
 RESEND_API_KEY_APP='re_TKeNqTmh_7iNKtnZiktxfA6gdsZ4YmiTJ'
 NEXTAUTH_SECRET='abc'
+OPENAI_API_KEY=''
