--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://Astitwa:Astitwa123@truefeedback.k9v5ldv.mongodb.net/?retryWrites=true&w=majority&appName=TrueFeedback'
 RESEND_API_KEY='re_XxtWYYPx_KEZCkVExTMk2tMcxa2f2oytU'
 RESEND_API_KEY_APP='re_TKeNqTmh_7iNKtnZiktxfA6gdsZ4YmiTJ'
 NEXTAUTH_SECRET='abc'
